[package]
name = "wasm-dataflow"
version = "0.1.0"
authors = ["oli-w"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
console_error_panic_hook = { version = "0.1.7", optional = true }
console_log = "1.0.0"
differential-dataflow = { git = "https://github.com/oli-w/differential-dataflow", branch = "timeless" }

itertools = "0.10.5"
js-sys = "0.3.69"
lazy_static = "1.4.0"
log = "0.4.21"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
serde-wasm-bindgen = "0.4"
timely = { git = "https://github.com/frankmcsherry/timely-dataflow", branch = "timeless" }
ts-rs = { version = "7.1.1", features = ["ordered-float-impl"] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'Storage'
] }

[profile.release]
# Best performance
lto = true
# Tell `rustc` to optimize for small code size.
#opt-level = "s"
